tests/NormalTests/paczka1/fuzzy1/10182266.err
Error in line 1: A3 A48 64,9
Error in line 2: A3 A48 112,3
Error in line 9: A3 A538 62,3
Error in line 11: 97yOKSE SHH3 60,1
Error in line 22: NwY4J AG 20G,6
Error in line 28: 97yOKSE S553 0,8
Error in line 31: A3 A538 248,6
Error in line 27: uSqxkJdd A538 86,9
Error in line 35: A3 A538 93,2
Error in line 39: A3 A538 55,0
